# cpp_freqtable

./: CMakeLists.txt  README.md  main.cpp
data/: covid_aln.sam  ex1.desc.sam  mut.txt
src/: csv_from_reads.cpp  functions.cpp  main.cpp  profile_estimation.cpp  tmp
test/: run.cpp  test_functions.cpp
