cmake_minimum_required(VERSION 3.17)
project(cpp_freqtable)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_EXTENSIONS off)
message("CMAKE_CXX_EXTENSIONS is " ${CMAKE_CXX_EXTENSIONS})
set(CMAKE_CXX20_STANDARD_COMPILE_OPTION "-std=c++20")
message( "CMAKE_CXX20_STANDARD_COMPILE_OPTION is " ${CMAKE_CXX20_STANDARD_COMPILE_OPTION} ".")
set(CMAKE_VERBOSE_MAKEFILE on)

add_executable(cpp_freqtable main.cpp)